--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-email=devopstrainingblr@gmail.com
+email=gopikrishna.dadi123@gmail.com
 #always-auth=true
-_auth=YWRtaW46cGFzc3cwcmQ=
+_auth=admin:admin123=
 allowRepublish=true
